# iptv-checker-ui-interface

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  parse_test.js  test_epg.js  vite.config.js
.cursor/rules/: node.mdc
openspec/: config.yaml  project.md
openspec/specs/favourite-epg-search/: spec.md
openspec/specs/settings-basic/: spec.md
openspec/specs/settings-epg/: spec.md
openspec/specs/settings-search/: spec.md
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/check/: index.jsx
src/components/detail/: dialog.jsx  index.jsx  setting.jsx  sort.jsx  vtable.jsx
src/components/fast/: index.jsx
src/components/favourite/: epg-search.jsx
src/components/layout/: menu.css  menu.jsx  tabbar.jsx
src/components/ltask/: index.jsx  index1.jsx  index222.jsx
src/components/settings/: backup.jsx  donate.jsx  epg.jsx  favorite.jsx  index.jsx  keywords.jsx  logos.jsx  search.jsx
src/components/task/: DownloadDialog.jsx  ImportExportDialog.jsx  ShowReplaceDialog.jsx  TaskForm.jsx  TaskRow.jsx  index.jsx
src/context/: check-task.js  main.jsx  tasker.jsx  test.json
src/locals/: en.json  zh.json
src/request/: context.js  index.js  internal.js  local.js
src/router/: routes.jsx
src/services/: apiTaskService.js  fileStorageService.js  taskStorageService.js  tauriTaskService.js  webTaskService.js
src/utils/: i18n.js  utils.js
(+62 files in other folders)
